# qc-database

./: .dockerignore  CMakeLists.txt  DOCKER_COMPOSE_ISSUE_DIAGNOSIS.md  Dockerfile  FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  docker-compose.yml  init
config/: cache_config.yaml  haproxy.cfg  node1.yaml  node2.yaml  node3.yaml
examples/: CMakeLists.txt
include/cache/: cache_server.h
include/cache/cluster/: cluster_manager.h  raft.h  shard_manager.h  split_brain_detector.h
include/cache/common/: types.h
include/cache/hotspot/: hotspot_manager.h
include/cache/monitoring/: monitor.h
include/cache/network/: cache_service.h
include/cache/security/: auth_manager.h
include/cache/storage/: lsm_tree.h  storage_engine.h  wal.h
include/cache/time/: time_sync.h
include/cache/transaction/: transaction_manager.h
include/crc32c/: crc32c.h
monitoring/: prometheus.yml
monitoring/grafana/datasources/: prometheus.yml
scripts/: build.sh
src/: CMakeLists.txt  cache_server.cpp  crc32c.cpp  main.cpp
src/cluster/: split_brain_detector.cpp
src/hotspot/: hotspot_manager.cpp
src/storage/: lsm_tree.cpp  memtable.cpp  sstable.cpp  storage_engine_factory.cpp  wal.cpp
src/time/: time_sync.cpp
src/transaction/: transaction_manager.cpp
tests/: CMakeLists.txt  Makefile  README.md  client_tests.py  cpp_client_test.cpp  performance_test.py  test_config.yaml
